fixed copyright alignnment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,168 @@
-body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-left: 200px;
-    margin-right: 200px;
-    border background-color: #dddddd;
-}
+html {
+    height: 100%;
+ }
 
-
+ 
+h1 {
+    font-family: 'Georgia', Times, Times New Roman, serif; 
+    font-size: 25px;
+    color: #4aaaa5;
+    font-weight: bold;
+    border-bottom: 3px solid #dddddd;
+    padding-bottom: 2px;
+    margin: 38px 38px 0 38px;
+ }
+ 
 nav ul li {
     list-style-type: none;
+    width: 150px; 
     width: 100px; 
     float: right;
 }
- nav ul li a {
+
+nav ul li a {
+    text decoration: none;
     color: #777777;
-}
+} 
 
- h1{
-    background-color: #4aaaa5;
-    color: #ffffff;
-    margin-top: 18;
-    width: 334px;
-    height: 77px;
-}
-#main    {
-    background-color: #dddddd;
-    width: 280px;
-    margin: 50px auto;
-    } 
+p {
+    line-height: 25px;
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 16px;
+    color: #777777;
+    text-align-last: auto;
+ }
+ 
 
- h2 {
-     color: #4aaaa5;
-}
+body { 
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background: url('../images/fresh_snow/fresh_snow.png') 100% 100%;
+    min-height: 100%;
+ }
+ 
+ 
+strong { 
+    font-weight: 700;
+ }
+ 
+ 
+.container {
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    min-height: 100vh; 
+ }
+ 
+  
+.main-header {
+    background: white;
+    height: 90px;
+    border-bottom: 1px solid #cccccc;
+ }
+ 
 
-#profilepic {
-    float: left;
-    padding: 25px; 
-}
+.header-container {
+    margin: 0 auto;
+    width: 960px;
+ }
 
- p {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777; 
+
+.logo {
     display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    width: 350px;
+    height: 90px;
+    background: #4aaaa5;
+    color: #FFF;
+    float: left; 
+ }
+
+
+
+.navigation {
+    float: right;
+ }
+ 
+
+.nav-item { 
+    display: inline-block;
+    font-size: 16px;
+ }
+ 
+.nav-item a {
+    color: #9A9A9B;
+    text-decoration: none;
+ }
+ 
+
+.nav-container {
+    padding-top: 30px
+ }
+
+.main-content {
+    width: 960px;
+    height: 500px;
+    padding: 20px;
 }
+ 
+
+.logo div {
+    font-size: 28px;
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: bold; 
+ }
+ 
+ 
+.main-content {
+    border: 1px solid #dddddd;
+    background: #FFF; 
+    margin: 35px auto 35px auto; 
+ } 
+ 
+.profile {
+    float: left;
+    margin-right: 15px
+ }
+
+ 
+.article {
+    padding: 20px;
+    width: 930px;
+    height: 430px;
+}
+ 
+.contact-form {
+    padding: 40px
+ }
+ 
+ 
+.article-content { 
+    display: inherit
+ }
+ 
+
+.nav-divider {
+    color: #dddddd;
+    font-size: 18px;
+ } 
+
+
+footer {
+    background: #666666;
+    border-top: 5px solid #4aaaa5;
+    text-align: center;
+    height: 90px;
+    width: 100%;
+    position: absolute;
+    bottom: 0
+ }
+ 
+
+.copyright {
+    color: #FFF;
+    padding-top: 30px; 
+    width: 1216px;
+    height: 18px;
+    display: block;
+ }
